<resources>
    <string name="app_name">Financial assets</string>
    <string name="title_login">Login</string>
    <string name="title_signup">Signup</string>
    <string name="item_user">Username</string>
    <string name="item_password">Password</string>
    <string name="item_continue">Continue</string>
    <string name="title_product_list">Products</string>
    <string name="title_favourite_list">Favourites</string>
    <string name="title_product_detail">Asset Detail</string>
    <string name="item_content">Item Content</string>
    <string name="item_infromation">ASSET INFORMATION</string>
    <string name="item_type">Asset type</string>
    <string name="item_isin">ISIN code</string>
    <string name="item_currency">Currency</string>
    <string name="item_max_spread">Maximum spread</string>
    <string name="item_value">Fund value</string>
    <string name="set_favourite">Add favourite</string>
    <string name="unset_favourite">Remove favourite</string>


</resources>
